--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     <!-- For all other devices -->
     <!-- Size should be 32 x 32 pixels -->
     
-
+    <%= javascript_include_tag "https://js.stripe.com/v2/" %>
     <%= javascript_include_tag "application" %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -45,34 +45,36 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">PhotoApp</a>
+        <%= link_to 'PhotoApp', root_path, class:"navbar-brand" %>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
-            <% if user_signed_in? %>
-                <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "btn btn-danger logbtn" %>
-            <% else %>
-              <%= link_to 'Sign In', user_session_path, class: "btn btn-success logbtn" %>
-            <% end %>
+          <ul class="nav navbar-right col-md-4">
+          <% if current_user %>          
+          <li class="col-md-8 user-name">          
+          <%= link_to ('<i class="fa fa-user"></i> ' + truncate(current_user.email, length: 25)).html_safe,          
+          edit_user_registration_path, title: 'Edit Profile' %>          
+          </li>          
+          <li class="col-md-1"> </li>          
+          <li class="col-md-3 logout"><%= link_to('Logout', destroy_user_session_path,          
+          class: 'btn btn-xs btn-danger', title: 'Logout', :method => :delete) %></li>          
+          <% else %>          
+          <li class="col-md-4 pull-right">         
+          <%= link_to('Sign In', new_user_session_path, class: 'btn btn-primary', title: 'Sign In') %>          
+          </li>          
+          <% end %>
           </ul>
           
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-12">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
       </div><!--/row-->
 
-      <footer>
-        <p>&copy; Company 2020</p>
-      </footer>
+      
 
     </div> <!-- /container -->
 
